# app/Services/Api/TaskService.php
@@ -7,8 +7,10 @@ namespace App\Services\Api;
 use App\Contracts\Api\CreateTaskModelInterface;
 use App\Contracts\Api\EditTaskModelInterface;
 use App\Models\Task;
+use App\Models\User;
 use Carbon\Carbon;
 use Illuminate\Database\Eloquent\Collection;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 
 class TaskService
 {
@@ -16,17 +18,24 @@ class TaskService
     {
         $validated = $this->validated($model->getStatus(), $model->getPriority());
         $task = new Task();
-        if (($validated->status == 'true') and ($validated->priority == 'true')) {
-            $task->status = $model->getStatus();
-            $task->priority = $model->getPriority();
-            $task->title = $model->getTitle();
-            $task->description = $model->getDescription();
-            $task->parent_id = $model->getParentId();
-            $task->user_id = $model->getUserId();
-            $task->save();
-            $task->validated = true;
+
+        if (!isset($validated->status) and !isset($validated->priority)) {
+            $checkUser = $this->checkUser($model->getUserId());
+
+            if ($checkUser) {
+                $task->status = $model->getStatus();
+                $task->priority = $model->getPriority();
+                $task->title = $model->getTitle();
+                $task->description = $model->getDescription();
+                $task->parent_id = $model->getParentId();
+                $task->user_id = $model->getUserId();
+                $task->save();
+            } else {
+                $task->error = 'User not found';
+            }
+
         } else {
-            $task->validated = $validated;
+            $task->error = $validated;
         }
 
         return $task;
@@ -35,30 +44,57 @@ class TaskService
     public function edit(EditTaskModelInterface $model, int $id): Task
     {
         $validated = $this->validated($model->getStatus(), $model->getPriority());
-        $task = Task::query()->find($id);
-        if (($validated->status == 'true') and ($validated->priority == 'true')) {
-            $countTodoSubTask = sizeof($this->checkSubTaskStatus($id, 'todo'));
-            $taskStatus = $this->checkTaskStatus($id);
-            if (($countTodoSubTask == 0) and ($taskStatus->status == 'todo')) {
-                $task->status = $model->getStatus();
-                $task->priority = $model->getPriority();
-                $task->title = $model->getTitle();
-                $task->description = $model->getDescription();
-                if ($model->getStatus() == 'done') {
-                    $task->finished_at = Carbon::now();
-                }
-                $task->updated_at = Carbon::now();
-                $task->save();
-                $task->validated = true;
-            } else {
-                if ($taskStatus->status == 'done') {
-                    $task->validated = 'Task completed ' . date_format($taskStatus->finished_at, 'H:i:s d.m.Y');
+
+        if (!isset($validated->status) and !isset($validated->priority)) {
+            $checkTask = $this->checkTask($id);
+
+            if ($checkTask) {
+
+                if ($checkTask->status == 'todo') {
+                    $checkUser = $this->checkUser($model->getUserId());
+
+                    if ($checkUser) {
+                        $countTodoSubTask = sizeof($this->checkSubTaskStatus($id, 'todo'));
+                        if (($model->getStatus() == 'done') and ($countTodoSubTask == 0)) {
+                            $task = Task::find($id);
+                            $task->status = $model->getStatus();
+                            $task->priority = $model->getPriority();
+                            $task->title = $model->getTitle();
+                            $task->description = $model->getDescription();
+                            $task->parent_id = $model->getParentId();
+                            $task->user_id = $model->getUserId();
+                            $task->finished_at = Carbon::now();
+                            $task->updated_at = Carbon::now();
+                            $task->save();
+                        } elseif ($model->getStatus() == 'todo') {
+                            $task = Task::find($id);
+                            $task->status = $model->getStatus();
+                            $task->priority = $model->getPriority();
+                            $task->title = $model->getTitle();
+                            $task->description = $model->getDescription();
+                            $task->parent_id = $model->getParentId();
+                            $task->user_id = $model->getUserId();
+                            $task->updated_at = Carbon::now();
+                            $task->save();
+                        } else {
+                            $task = new Task();
+                            $task->error = $countTodoSubTask . ' unfinished subtasks left';
+                        }
+                    } else {
+                        $task = new Task();
+                        $task->error = 'User not found';
+                    }
                 } else {
-                    $task->validated = $countTodoSubTask . ' unfinished subtasks left';
+                    $task = new Task();
+                    $task->error = 'Task completed ' . date_format($checkTask->finished_at, 'H:i:s d.m.Y') . '. Editing is prohibited!';
                 }
+            } else {
+                $task = new Task();
+                $task->error = 'Task not found';
             }
         } else {
-            $task->validated = $validated;
+            $task = new Task();
+            $task->error = $validated;
         }
 
         return $task;
@@ -66,17 +102,28 @@ class TaskService
 
     public function delete(int $id)
     {
-        $checkStatus = $this->checkTaskStatus($id);
-        $checkSubTasks = sizeof($this->checkSubTaskStatus($id, 'todo'));
-        if ($checkStatus->status == 'todo') {
-            if ($checkSubTasks == 0) {
-                return Task::query()->find($id)->delete();
+        $task = new Task();
+        $checkTask = $this->checkTask($id);
+
+        if ($checkTask) {
+
+            if ($checkTask->status == 'todo') {
+                $checkSubTasks = sizeof($this->checkSubTaskStatus($id, 'todo'));
+
+                if ($checkSubTasks == 0) {
+                    Task::find($id)->delete();
+                    $task->success = 'The task was successfully deleted';
+                } else {
+                    $task->error = 'You cannot delete a task that has subtasks';
+                }
             } else {
-                return 'You cannot delete a task that has subtasks';
+                $task->error = 'You cannot delete a completed task';
             }
         } else {
-            return 'You cannot delete a completed task';
+            $task->error = 'Task not found';
         }
+
+        return $task;
     }
 
     private function checkSubTaskStatus(int $id, $todoStatus = null): array | Collection
@@ -95,24 +142,38 @@ class TaskService
         }
     }
 
-    private function checkTaskStatus(int $id)
+    private function checkTask(int $id)
     {
-        return Task::query()->findOrFail($id);
+        try {
+            $task = Task::findOrFail($id);
+        } catch (ModelNotFoundException) {
+            return false;
+        }
+
+        return $task;
     }
 
-    private function validated(string $status, int $priority)
+    private function checkUser(int $id)
+    {
+        try {
+            $user = User::findOrFail($id);
+        } catch (ModelNotFoundException) {
+            return false;
+        }
+
+        return $user;
+    }
+
+    private function validated(string $status, int $priority): object
     {
         $validated = (object)[];
-        $valid_status = array('todo', 'done');
-        if (in_array($status, $valid_status)) {
-            $validated->status = true;
-        } else {
+        $valid_status = ['todo', 'done'];
+
+        if (!in_array($status, $valid_status)) {
             $validated->status = 'Status must be "todo" or "done"';
         }
 
-        if (($priority >= 1) and ($priority <= 5)) {
-            $validated->priority = true;
-        } else {
+        if (($priority < 1) or ($priority > 5)) {
             $validated->priority = 'Priority can be from 1 to 5';
         }
 
