# storage/api-docs/api-docs.yaml
@@ -29,8 +29,6 @@ paths:
       responses:
         200:
           description: OK
-        404:
-          description: 'Tasks not found'
     post:
       tags:
         - 'TODO project'
@@ -47,11 +45,6 @@ paths:
           description: 'Task created'
         400:
           description: 'Bad request'
-        404:
-          description: 'Page not found'
-      security:
-        -
-          api_key: []
   '/tasks/{id}':
     get:
       tags:
@@ -70,11 +63,8 @@ paths:
       responses:
         200:
           description: OK
-        404:
+        400:
           description: 'This task not found'
-      security:
-        -
-          api_key: []
     put:
       tags:
         - 'TODO project'
@@ -93,17 +83,12 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TaskStoreRequest'
+              $ref: '#/components/schemas/TaskUpdateRequest'
       responses:
         200:
           description: OK
         400:
           description: 'Bad request'
-        404:
-          description: 'Page not found'
-      security:
-        -
-          api_key: []
     delete:
       tags:
         - 'TODO project'
@@ -121,9 +106,8 @@ paths:
       responses:
         202:
           description: Deleted
-      security:
-        -
-          api_key: []
+        400:
+          description: 'Bad request'
   /tasks/findByFilter:
     post:
       tags:
@@ -259,12 +243,19 @@ components:
           type: string
           format: string
           example: 'example task description'
+        parent_id:
+          title: 'Parent ID'
+          description: 'Parent ID'
+          type: integer
+          format: int64
+          example: '1'
+        user_id:
+          title: 'User ID'
+          description: 'User ID'
+          type: integer
+          format: int64
+          example: '1'
       type: object
-  securitySchemes:
-    X-APP-ID:
-      type: apiKey
-      name: X-APP-ID
-      in: header
 tags:
   -
     name: 'TODO project'
